<resources>
    <string name="app_name">Cattle Health Manager</string>
    <string name="welcome">Welcome!</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="to_dashboard">To_Dashboard</string>
    <string name="title_activity_my_animals">MyAnimals</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="my_animals">My Animals</string>
    <string name="cowhead">cowhead</string>
    <string name="pills">pills</string>
    <string name="medicals">Medicals</string>
    <string name="vet_guy">vet guy</string>
    <string name="vet_list">Vet List</string>
    <string name="money">money</string>
    <string name="finances">Finances</string>
    <string name="feed">feed</string>
    <string name="food_and_nutrition">Food and Nutrition</string>
    <string name="logo">logo</string>
    <string name="add_animal">Add Animal</string>
    <string name="tag_no">Tag No.</string>
    <string name="breed">Breed</string>
    <string name="weight">Weight</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add">Add</string>
    <string name="method_obtained">methodObtained</string>
    <string name="fNo">fatherTag</string>
    <string name="mNo">mNo</string>
    <string name="mother_tag">Mother Tag</string>
    <string name="father_tag">Father Tag</string>
    <string name="Dashboard">Dashbaord</string>
    <string name="home_logo">home logo</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new_user">Create new user</string>
    <string name="welcome_please_login">Welcome, please login</string>
    <string name="cattle_list">Cattle List</string>
    <string name="vet">vet</string>
    <string name="first_name">first name</string>
    <string name="add_vet">Add Vet</string>
    <string name="last_name">last name</string>
    <string name="phone">phone</string>
    <string name="email">email</string>
    <string name="location">loction</string>
    <string name="addv">addv</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="Location">Location</string>
    <string name="cancel">cancel</string>
    <string name="vaccination_sche">vaccination schedule</string>
    <string name="needle">needle</string>
    <string name="fleatickheader">flea tick header</string>
    <string name="Vaccination_schedule">Vaccination Schedule</string>
    <string name="Vaccination_Schedule">Vaccination Schedule</string>
    <string name="tick_control">Tick Control</string>
    <string name="Monthly_Schedule">Monthly Schedule</string>
    <string name="Monthly_Report">Monthly Report</string>
    <string name="treatment">Treatment</string>
    <string name="Calving">Calving</string>
    <string name="Username">Username</string>
    <string name="Create_Password">Create Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="adds_animal">adds animal</string>

    <!-- Strings used for display vet info -->
    <string name="action_settings">Settings</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Vet Contact</string>
    <string name="title_activity_display_contact">Display Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">save</string>
    <string name="Login">Login</string>
    <string name="create_user">create user</string>
    <string name="add_note">add_note</string>
</resources>