<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aquamarine"
    tools:context=".DashboardActivity">


   <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

   <LinearLayout
       android:id="@+id/home_grid"
       android:layout_width="0dp"
       android:layout_height="180dp"
       android:layout_marginStart="1dp"
       android:layout_marginTop="12dp"
       android:layout_marginEnd="1dp"
       android:layout_weight="1"
       android:orientation="horizontal"
       android:padding="10dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/toolbar">

      <androidx.cardview.widget.CardView
          android:id="@+id/card1"
          android:layout_width="170dp"
          android:layout_height="match_parent"
          android:layout_margin="10dp"
          app:cardElevation="3dp" >

         <RelativeLayout
             android:id="@+id/toMyAnimals"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_centerInParent="true"
                android:layout_marginTop="9dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/my_animals"
                android:textAlignment="center"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/cowhead"
                app:srcCompat="@drawable/cowhead" />
         </RelativeLayout>
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/card2"
          android:layout_width="170dp"
          android:layout_height="match_parent"
          android:layout_margin="10dp"
          app:cardElevation="3dp" >

         <RelativeLayout
             android:id="@+id/toFood"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView6"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/food_and_nutrition"
                android:textAlignment="center"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/feed"
                app:srcCompat="@drawable/feed2" />
         </RelativeLayout>
      </androidx.cardview.widget.CardView>
   </LinearLayout>

   <LinearLayout
       android:id="@+id/home_grid1"
       android:layout_width="0dp"
       android:layout_height="180dp"
       android:layout_marginStart="1dp"
       android:layout_marginEnd="1dp"
       android:layout_weight="1"
       android:orientation="horizontal"
       android:padding="10dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/home_grid"
       tools:ignore="DuplicateIds">

      <androidx.cardview.widget.CardView
          android:id="@+id/card3"
          android:layout_width="170dp"
          android:layout_height="match_parent"
          android:layout_margin="10dp"
          app:cardElevation="3dp">

         <RelativeLayout
             android:id="@+id/toVaccines"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="9dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/medicals"
                android:textAlignment="center"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/pills"
                app:srcCompat="@drawable/pills" />
         </RelativeLayout>
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/card4"
          android:layout_width="170dp"
          android:layout_height="match_parent"
          android:layout_margin="10dp"
          app:cardElevation="3dp">

         <RelativeLayout
             android:id="@+id/toVetList"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="9dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/vet_list"
                android:textAlignment="center"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/vet_guy"
                app:srcCompat="@drawable/vet" />
         </RelativeLayout>
      </androidx.cardview.widget.CardView>

   </LinearLayout>

   <LinearLayout
       android:id="@+id/home_grid2"
       android:layout_width="0dp"
       android:layout_height="180dp"
       android:layout_marginStart="1dp"
       android:layout_marginEnd="1dp"
       android:layout_weight="1"
       android:orientation="horizontal"
       android:padding="10dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/home_grid1"
       tools:ignore="DuplicateIds">

      <androidx.cardview.widget.CardView
          android:id="@+id/card5"
          android:layout_width="170dp"
          android:layout_height="match_parent"
          android:layout_margin="10dp"
          app:cardElevation="3dp">

         <RelativeLayout
             android:id="@+id/toFinances"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="9dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/finances"
                android:textAlignment="center"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/money"
                app:srcCompat="@drawable/money" />
         </RelativeLayout>
      </androidx.cardview.widget.CardView>

   </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>